--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -283,3 +283,18 @@
 @misc{zotero-1,
   type = {Misc}
 }
+
+
+@article{Matentzoglu2022,
+   abstract = {Similar to managing software packages, managing the ontology life cycle involves multiple complex workflows such as preparing releases, continuous quality control checking and dependency management. To manage these processes, a diverse set of tools is required, from command-line utilities to powerful ontology-engineering environmentsr. Particularly in the biomedical domain, which has developed a set of highly diverse yet inter-dependent ontologies, standardizing release practices and metadata and establishing shared quality standards are crucial to enable interoperability. The Ontology Development Kit (ODK) provides a set of standardized, customizable and automatically executable workflows, and packages all required tooling in a single Docker image. In this paper, we provide an overview of how the ODK works, show how it is used in practice and describe how we envision it driving standardization efforts in our community. Database URL: https://github.com/INCATools/ontology-development-kit},
+   author = {Nicolas Matentzoglu and Damien Goutte-Gattat and Shawn Zheng Kai Tan and James P. Balhoff and Seth Carbon and Anita R. Caron and William D. Duncan and Joe E. Flack and Melissa Haendel and Nomi L. Harris and William R. Hogan and Charles Tapley Hoyt and Rebecca C. Jackson and Hyeongsik Kim and Huseyin Kir and Martin Larralde and Julie A. McMurry and James A. Overton and Bjoern Peters and Clare Pilgrim and Ray Stefancsik and Sofia M.C. Robb and Sabrina Toro and Nicole A. Vasilevsky and Ramona Walls and Christopher J. Mungall and David Osumi-Sutherland},
+   doi = {10.1093/database/baac087},
+   issn = {17580463},
+   journal = {Database},
+   pages = {1-8},
+   pmid = {36208225},
+   publisher = {OUP Publishing},
+   title = {Ontology Development Kit: A toolkit for building, maintaining and standardizing biomedical ontologies},
+   volume = {2022},
+   year = {2022},
+}
