--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,3 +1,15 @@
+@misc{allaireQuarto2022,
+  title = {Quarto},
+  author = {Allaire, J.J. and Teague, Charles and Xie, Yihui and Dervieux, Christophe},
+  year = {2022},
+  month = jan,
+  doi = {10.5281/ZENODO.5960048},
+  urldate = {2024-02-20},
+  abstract = {Quarto is an open-source scientific and technical publishing system built on Pandoc.},
+  copyright = {GNU General Public License v2.0 or later, Open Access},
+  howpublished = {Zenodo}
+}
+
 @misc{atteveldtCorpustoolsManagingQuerying2023,
   title = {Corpustools: {{Managing}}, {{Querying}} and {{Analyzing Tokenized Text}}},
   shorttitle = {Corpustools},
@@ -48,6 +60,47 @@
   lastchecked = {2024}
 }
 
+@article{Cobalt,
+  title = {Association of Blood Cobalt Concentrations with Dyslipidemia, Hypertension, and Diabetes in a {{US}} Population},
+  author = {Wang, Hongxin and Li, Feng and Xue, Jianghua and Li, Yanshuang and Li, Jiyu},
+  year = {2022},
+  month = jan,
+  journal = {Medicine},
+  volume = {101},
+  number = {2},
+  pages = {e28568},
+  issn = {0025-7974},
+  doi = {10.1097/MD.0000000000028568},
+  urldate = {2024-02-20},
+  abstract = {Various heavy metal elements in the human body have been reported to be associated with dyslipidemia, hypertension, and diabetes. The role of cobalt in these conditions is unclear. The current study aimed to investigate the association of blood cobalt concentrations with dyslipidemia, hypertension, and diabetes., Using the data collected from the National Health and Nutrition Examination Survey (2015-2018), we performed logistic regression to explore the association of blood cobalt concentrations with total cholesterol (TC), low-density lipoprotein cholesterol (LDL-C), high-density lipoprotein cholesterol (HDL-C), triglycerides, hypertension, and diabetes., A total of 6866 adults were included in this study. Participants with higher blood cobalt levels appeared to be older and have a lower body mass index and, were more likely to be female (P for trend{$\mkern1mu<\mkern1mu$}.05). After fully adjusting for demographic characteristics (Model 2), compared with the lowest quartile, the highest quartile of blood cobalt concentrations had lower odds ratios (ORs) for elevated TC [OR: 0.62, 95\% confidential interval (CI): 0.53 to 0.72, P{$\mkern1mu<\mkern1mu$}.001], elevated LDL-C (OR: 0.65, 95\% CI: 0.53-0.80, P{$\mkern1mu<\mkern1mu$}.001) and low HDL-C (OR: 0.81, 95\% CI: 0.69-0.96, P{$\mkern1mu$}={$\mkern1mu$}.013). The adjusted ORs for elevated TC, elevated LDL-C and low HDL-C were negatively correlated with increased blood cobalt concentrations (P for trend{$\mkern1mu<\mkern1mu$}.05). The adjusted ORs for hypertension and diabetes were not associated with blood cobalt concentrations (P{$\mkern1mu>\mkern1mu$}.05 and P for trend{$\mkern1mu>\mkern1mu$}.05)., In conclusion, higher blood cobalt concentrations were associated with a lower risk of dyslipidemia. However, blood cobalt concentrations were not associated with the risk of hypertension or diabetes.},
+  pmcid = {PMC8757996},
+  pmid = {35029227}
+}
+
+@article{Docker,
+  title = {Docker: Lightweight Linux Containers for Consistent Development and Deployment.},
+  author = {Merkel, D.},
+  year = {2014},
+  journal = {Linux Journal}
+}
+
+@article{edlinMoreAccurateEstimate2015,
+  title = {Toward a {{More Accurate Estimate}} of the {{Prevalence}} of {{Hepatitis C}} in the {{United States}}},
+  author = {Edlin, Brian R. and Eckhardt, Benjamin J. and Shu, Marla A. and Holmberg, Scott D. and Swan, Tracy},
+  year = {2015},
+  month = nov,
+  journal = {Hepatology (Baltimore, Md.)},
+  volume = {62},
+  number = {5},
+  pages = {1353--1363},
+  issn = {0270-9139},
+  doi = {10.1002/hep.27978},
+  urldate = {2024-02-23},
+  abstract = {Data from the 2003-2010 National Health and Nutrition Examination Survey (NHANES) indicate that about 3.6 million people in the United States have antibodies to the hepatitis C virus, of whom 2.7 million are currently infected. NHANES, however, excludes several high-risk populations from its sampling frame, including people who are incarcerated, homeless, or hospitalized; nursing home residents; active-duty military personnel; and people living on Indian reservations. We undertook a systematic review of peer-reviewed literature and sought out unpublished presentations and data to estimate the prevalence of hepatitis C in these excluded populations and in turn improve the estimate of the number of people with hepatitis C in the United States. The available data do not support a precise result, but we estimated that 1.0 million (range 0.4 million-1.8 million) persons excluded from the NHANES sampling frame have hepatitis C virus antibody, including 500,000 incarcerated people, 220,000 homeless people, 120,000 people living on Indian reservations, and 75,000 people in hospitals. Most are men. An estimated 0.8 million (range 0.3 million-1.5 million) are currently infected. Several additional sources of underestimation, including nonresponse bias and the underrepresentation of other groups at increased risk of hepatitis C that are not excluded from the NHANES sampling frame, were not addressed in this study.},
+  pmcid = {PMC4751870},
+  pmid = {26171595}
+}
+
 @misc{endresCjendres1Nhanes2024,
   title = {Cjendres1/Nhanes},
   author = {Endres, Christopher},
@@ -56,6 +109,13 @@
   urldate = {2024-02-19},
   abstract = {nhanesA: R package for browsing and retrieving NHANES data},
   keywords = {cran-r,nhanes}
+}
+
+@book{geiger1995inside,
+  title = {Inside {{ODBC}}},
+  author = {Geiger, Kyle},
+  year = {1995},
+  publisher = {Microsoft Press}
 }
 
 @book{gentlemanGwasCatSearchPackageSupport2024,
@@ -69,6 +129,24 @@
   title = {{{gwasCatSearch}}: {{A}} Package to Support Ontological Search of the {{GWAS Catalog}}},
   author = {Gentleman, Robert and Carey, Vincent and Goncalves, Rafael},
   year = {2024}
+}
+
+@misc{GWASCatalogSearchDB,
+  title = {{{NHANES}} Parser},
+  author = {Gon{\c c}alves, Rafael and Payne, Jason},
+  urldate = {2024-05-28}
+}
+
+@misc{GWASCatalogSearchDB,
+  title = {{{NHANES}} Parser},
+  author = {Gon{\c c}alves, Rafael and Payne, Jason},
+  urldate = {2024-05-28}
+}
+
+@misc{GWASCatalogSearchDB,
+  title = {{{GWASCatalogSearchDB}}},
+  author = {Gon{\c c}alves, Rafael and Payne, Jason},
+  urldate = {2024-05-28}
 }
 
 @article{HPO2024,
@@ -111,6 +189,16 @@
   keywords = {linkml,oaklib,obofoundry,ontologies,owl,relation-graph,sparql,sql}
 }
 
+@inproceedings{Kluyver2016jupyter,
+  title = {Jupyter {{Notebooks}} -- a Publishing Format for Reproducible Computational Workflows},
+  booktitle = {Positioning and Power in Academic Publishing: {{Players}}, Agents and Agendas},
+  author = {Kluyver, Thomas and {Ragan-Kelley}, Benjamin and P{\'e}rez, Fernando and Granger, Brian and Bussonnier, Matthias and Frederic, Jonathan and Kelley, Kyle and Hamrick, Jessica and Grout, Jason and Corlay, Sylvain and Ivanov, Paul and Avila, Dami{\'a}n and Abdalla, Safia and Willing, Carol},
+  editor = {Loizides, F. and Schmidt, B.},
+  year = {2016},
+  pages = {87--90},
+  publisher = {IOS Press}
+}
+
 @article{maloneModelingSampleVariables2010,
   title = {Modeling Sample Variables with an {{Experimental Factor Ontology}}},
   author = {Malone, James and Holloway, Ele and Adamusiak, Tomasz and Kapushesky, Misha and Zheng, Jie and Kolesnikov, Nikolay and Zhukova, Anna and Brazma, Alvis and Parkinson, Helen},
@@ -127,6 +215,54 @@
   pmcid = {PMC2853691},
   pmid = {20200009},
   file = {/Users/robert/Zotero/storage/QDHSA8KS/Malone et al. - 2010 - Modeling sample variables with an Experimental Fac.pdf}
+}
+
+@misc{ManualTitleGwasCatSearch,
+  title = {@{{Manual}}\{,     Title = \{\vphantom{\}\}}{{gwasCatSearch}}: {{A}} Package to Support Ontological Search of the {{GWAS Catalog}}\vphantom\{\},     Author = \{\vphantom\}{{Robert Gentleman}} and {{Vincent Carey}} and {{Rafael Goncalves}}\vphantom\{\},     Year = \{2024\},     Note = \{\vphantom\}{{R}} Package Version 0.2.2\vphantom\{\},   \vphantom\{\}}
+}
+
+@article{Matentzoglu2022,
+  title = {Ontology {{Development Kit}}: A Toolkit for Building, Maintaining and Standardizing Biomedical Ontologies},
+  shorttitle = {Ontology {{Development Kit}}},
+  author = {Matentzoglu, Nicolas and {Goutte-Gattat}, Damien and Tan, Shawn Zheng Kai and Balhoff, James P. and Carbon, Seth and Caron, Anita R. and Duncan, William D. and Flack, Joe E. and Haendel, Melissa and Harris, Nomi L. and Hogan, William R. and Hoyt, Charles Tapley and Jackson, Rebecca C. and Kim, HyeongSik and Kir, Huseyin and Larralde, Martin and McMurry, Julie A. and Overton, James A. and Peters, Bjoern and Pilgrim, Clare and Stefancsik, Ray and Robb, Sofia Mc and Toro, Sabrina and Vasilevsky, Nicole A. and Walls, Ramona and Mungall, Christopher J. and {Osumi-Sutherland}, David},
+  year = {2022},
+  month = oct,
+  journal = {Database: The Journal of Biological Databases and Curation},
+  volume = {2022},
+  pages = {baac087},
+  issn = {1758-0463},
+  doi = {10.1093/database/baac087},
+  abstract = {Similar to managing software packages, managing the ontology life cycle involves multiple complex workflows such as preparing releases, continuous quality control checking and dependency management. To manage these processes, a diverse set of tools is required, from command-line utilities to powerful ontology-engineering environmentsr. Particularly in the biomedical domain, which has developed a set of highly diverse yet inter-dependent ontologies, standardizing release practices and metadata and establishing shared quality standards are crucial to enable interoperability. The Ontology Development Kit (ODK) provides a set of standardized, customizable and automatically executable workflows, and packages all required tooling in a single Docker image. In this paper, we provide an overview of how the ODK works, show how it is used in practice and describe how we envision it driving standardization efforts in our community. Database URL: https://github.com/INCATools/ontology-development-kit.},
+  langid = {english},
+  pmcid = {PMC9547537},
+  pmid = {36208225},
+  keywords = {Biological Ontologies,Databases Factual,Metadata,Quality Control,Software,Workflow}
+}
+
+@techreport{NHANES,
+  year = {1999/2023},
+  address = {Hyattsville, MD: U.S. Department of Health and Human Services},
+  institution = {{Centers for Disease Control and Prevention (CDC). National Center for Health Statistics (NCHS). National Health and Nutrition Examination Survey Data.}},
+  urldate = {Feb, 2023}
+}
+
+@manual{nhanesA,
+  type = {Manual},
+  title = {{{nhanesA}}: {{NHANES}} Data Retrieval},
+  author = {Endres, Christopher and Ale, Laha and Gentleman, Robert and Sarkar, Deepayan},
+  year = {2024}
+}
+
+@misc{NhanesIssues,
+  title = {Towards {{Machine-Assisted Biomedical Data Preparation}}: {{A Use Case}} on {{Disparity}} in {{Access}} to {{Health Care}} {\textbar} {{HADatAc}}.Org},
+  urldate = {2024-03-05},
+  howpublished = {https://www.hadatac.org/node/123}
+}
+
+@misc{pancCancer,
+  title = {Associations between Pancreatic Expression Quantitative Traits and Risk of Pancreatic Ductal Adenocarcinoma - {{PubMed}}},
+  urldate = {2024-04-29},
+  howpublished = {https://pubmed.ncbi.nlm.nih.gov/34216462/}
 }
 
 @article{pancCancer,
@@ -163,6 +299,38 @@
   pmid = {33471061}
 }
 
+@manual{phonto2024,
+  type = {Manual},
+  title = {Phonto: {{Using NHANES}} via Epiconductor},
+  author = {Ale, Laha and Gentleman, Robert},
+  year = {2024}
+}
+
+@inproceedings{pinheiro2023,
+  title = {Towards Machine-Assisted Biomedical Data Preparation: {{A}} Use Case on Disparity in Access to Health Care},
+  booktitle = {{{SeWebMeDa-2023}}: 6th {{International Workshop}} on {{Semantic Web}} Solutions for Large-Scale Biomedical Data Analytics},
+  author = {Pinheiro, P. and Santos, Henrique and Qi, Miao and Bennett, Kristin P. and McGuinness, Deborah L.},
+  year = {2023},
+  publisher = {CEUR Workshop Proceedings (CEUR-WS.org)}
+}
+
+@inproceedings{pinheiro2023,
+  title = {Towards Machine-Assisted Biomedical Data Preparation: {{A}} Use Case on Disparity in Access to Health Care},
+  booktitle = {{{SeWebMeDa-2023}}: 6th {{International Workshop}} on {{Semantic Web}} Solutions for Large-Scale Biomedical Data Analytics},
+  author = {Pinheiro, P. and Santos, Henrique and Qi, Miao and Bennett, Kristin P. and McGuinness, Deborah L.},
+  year = {2023},
+  publisher = {CEUR Workshop Proceedings (CEUR-WS.org)}
+}
+
+@manual{positteamRStudioIntegratedDevelopment2023,
+  type = {Manual},
+  title = {{{RStudio}}: {{Integrated}} Development Environment for {{R}}},
+  author = {{Posit team}},
+  year = {2023},
+  address = {Boston, MA},
+  institution = {Posit Software, PBC}
+}
+
 @article{rahman2022,
   title = {Association among Urinary Polycyclic Aromatic Hydrocarbons and Depression: A Cross-Sectional Study from {{NHANES}} 2015-2016},
   shorttitle = {Association among Urinary Polycyclic Aromatic Hydrocarbons and Depression},
@@ -179,6 +347,58 @@
   langid = {english},
   pmid = {34569004},
   keywords = {Adult,Biomarkers,Chemical,Cross-Sectional Studies,Depression,Environmental exposure,Humans,NHANES,Nutrition Surveys,Polycyclic aromatic hydrocarbons,Polycyclic Aromatic Hydrocarbons}
+}
+
+@article{RepRes,
+  title = {Statistical {{Analyses}} and {{Reproducible Research}}},
+  author = {Gentleman, Robert and Lang, Duncan Temple},
+  year = {2007},
+  journal = {Journal of Computational and Graphical Statistics},
+  volume = {16},
+  number = {1},
+  eprint = {27594227},
+  eprinttype = {jstor},
+  pages = {1--23},
+  publisher = {[American Statistical Association, Taylor \& Francis, Ltd., Institute of Mathematical Statistics, Interface Foundation of America]},
+  issn = {1061-8600},
+  urldate = {2024-02-20},
+  abstract = {It is important, if not essential, to integrate the computations and code used in data analyses, methodological descriptions, simulations, and so on with the documents that describe and rely on them. This integration allows readers to both verify and adapt the claims in the documents. Authors can easily reproduce the results in the future, and they can present the document's contents in a different medium, for example, with interactive controls. This article describes a software framework for both authoring and distributing these integrated, dynamic documents that contain text, code, data, and any auxiliary content needed to recreate the computations. The documents are dynamic in that the contents---including figures, tables, and so on---can be recalculated each time a view of the document is generated. Our model treats a dynamic document as a master or "source" document from which one can generate different views in the form of traditional, derived documents for different audiences. We introduce the concept of a compendium as a container for one or more dynamic documents and the different elements needed when processing them, such as code and data. The compendium serves as a means for distributing, managing, and updating the collection. The step from disseminating analyses via a compendium to reproducible research is a small one. By reproducible research, we mean research papers with accompanying software tools that allow the reader to directly reproduce the results and employ the computational methods that are presented in the research paper. Some of the issues involved in paradigms for the production, distribution, and use of such reproducible research are discussed.}
+}
+
+@manual{Rlang,
+  type = {Manual},
+  title = {R: {{A}} Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  year = {2021},
+  address = {Vienna, Austria},
+  institution = {R Foundation for Statistical Computing}
+}
+
+@manual{Rmarkdown,
+  type = {Manual},
+  title = {Rmarkdown: {{Dynamic}} Documents for {{R}}},
+  author = {Allaire, {\relax JJ} and Xie, Yihui and Dervieux, Christophe and McPherson, Jonathan and Luraschi, Javier and Ushey, Kevin and Atkins, Aron and Wickham, Hadley and Cheng, Joe and Chang, Winston and Iannone, Richard},
+  year = {2023}
+}
+
+@article{Rocker,
+  title = {An Introduction to Rocker: {{Docker}} Containers for {{R}}},
+  author = {Boettiger, Carl and Eddelbuettel, Dirk},
+  year = {2017},
+  journal = {The R Journal},
+  volume = {9},
+  number = {2},
+  pages = {527--536},
+  doi = {10.32614/RJ-2017-065}
+}
+
+@misc{SemanticsqlLICENSEMain,
+  title = {Semantic-Sql/{{LICENSE}} at Main {$\cdot$} {{INCATools}}/Semantic-Sql},
+  journal = {GitHub},
+  urldate = {2024-04-29},
+  abstract = {SQL and SQLite builds of OWL ontologies. Contribute to INCATools/semantic-sql development by creating an account on GitHub.},
+  howpublished = {https://github.com/INCATools/semantic-sql/blob/main/LICENSE},
+  langid = {english}
 }
 
 @article{sollisNHGRIEBIGWASCatalog2023,
@@ -223,6 +443,12 @@
   langid = {english},
   pmid = {35870639},
   keywords = {Black or African American,Genetic Predisposition to Disease,genome-wide association study,Genome-Wide Association Study,Humans,Hypertension,Kidney Diseases,Polymorphism Single Nucleotide,pQTL,protein quantitative trait loci,proteome,Proteome,Quantitative Trait Loci}
+}
+
+@misc{surveyP,
+  title = {Survey: Analysis of Complex Survey Samples},
+  author = {Lumley, Thomas},
+  year = {2023}
 }
 
 @article{Uberon2012,
@@ -284,17 +510,6 @@
   type = {Misc}
 }
 
-
-@article{Matentzoglu2022,
-   abstract = {Similar to managing software packages, managing the ontology life cycle involves multiple complex workflows such as preparing releases, continuous quality control checking and dependency management. To manage these processes, a diverse set of tools is required, from command-line utilities to powerful ontology-engineering environmentsr. Particularly in the biomedical domain, which has developed a set of highly diverse yet inter-dependent ontologies, standardizing release practices and metadata and establishing shared quality standards are crucial to enable interoperability. The Ontology Development Kit (ODK) provides a set of standardized, customizable and automatically executable workflows, and packages all required tooling in a single Docker image. In this paper, we provide an overview of how the ODK works, show how it is used in practice and describe how we envision it driving standardization efforts in our community. Database URL: https://github.com/INCATools/ontology-development-kit},
-   author = {Nicolas Matentzoglu and Damien Goutte-Gattat and Shawn Zheng Kai Tan and James P. Balhoff and Seth Carbon and Anita R. Caron and William D. Duncan and Joe E. Flack and Melissa Haendel and Nomi L. Harris and William R. Hogan and Charles Tapley Hoyt and Rebecca C. Jackson and Hyeongsik Kim and Huseyin Kir and Martin Larralde and Julie A. McMurry and James A. Overton and Bjoern Peters and Clare Pilgrim and Ray Stefancsik and Sofia M.C. Robb and Sabrina Toro and Nicole A. Vasilevsky and Ramona Walls and Christopher J. Mungall and David Osumi-Sutherland},
-   doi = {10.1093/database/baac087},
-   issn = {17580463},
-   journal = {Database},
-   pages = {1-8},
-   pmid = {36208225},
-   publisher = {OUP Publishing},
-   title = {Ontology Development Kit: A toolkit for building, maintaining and standardizing biomedical ontologies},
-   volume = {2022},
-   year = {2022},
+@misc{zotero-70,
+  type = {Misc}
 }
