--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -118,16 +118,9 @@
   publisher = {Microsoft Press}
 }
 
-@book{gentlemanGwasCatSearchPackageSupport2024,
+@misc{gentlemanGwasCatSearchPackageSupport2024a,
   title = {{{gwasCatSearch}}: {{A}} Package to Support Ontological Search of the {{GWAS Catalog}}},
-  author = {Gentleman, Robert and Carey, Vincent and Goncalves, Rafael},
-  year = {2024}
-}
-
-@manual{gentlemanGwasCatSearchPackageSupport2024a,
-  type = {Manual},
-  title = {{{gwasCatSearch}}: {{A}} Package to Support Ontological Search of the {{GWAS Catalog}}},
-  author = {Gentleman, Robert and Carey, Vincent and Goncalves, Rafael},
+  author = {Gentleman, Robert and Carey, Vincent and Gon{\c c}alves, Rafael},
   year = {2024}
 }
 
