added funding info

--- a/vignettes/GWAScatPaper.Rmd
+++ b/vignettes/GWAScatPaper.Rmd
@@ -655,3 +655,8 @@ We believe that it is clear that use of ontologies and similar tools for organiz
 
 <div id="refs"></div>
 
+## Acknowledgments
+
+Vincent Carey was supported in part by National Institutes of Health
+grants 5U24HG004059-20 and 5U24CA180996-10, and by National
+Science Foundation ACCESS award BIR190004.
